# qtpu

./: .gitignore  .pdm.toml  ARTIFACT.md  AUTHOR_RESPONSE.md  Dockerfile  INTERNAL_PLAN.md  PAPER_SUMMARY.md  README.md  REPRODUCE.md  bench_config.json  bench_cut_qaoa2_5.csv  bench_cut_qaoa_5.csv  bench_cut_qft_5.csv  bench_cut_two_local_5.csv  bench_cut_vqe_5.csv  bench_routing copy 2.ipynb  bench_routing.ipynb  bench_vqr.json  bench_vroute_2local.csv  bench_vroute_qaoa.csv  c.py  catal.ipynb  ckt.ipynb  ckt2.ipynb  ckt_auto.ipynb  docplex_cutter.lp  exp.ipynb  flake.nix  hi.ipynb  lol.lp  my_db.sqlite  n.py  noxfile.py  pyproject.toml  pyvenv.cfg  q.py  qaoa.ipynb  qaoa.py  quickstart.ipynb  requirements-dev.txt  (+17 more)
.direnv/: nix-profile-22.11-gsygjkq2j5f8zn1z  nix-profile-22.11-gsygjkq2j5f8zn1z.rc
.direnv/python-3.10.12/: pyvenv.cfg
.github/workflows/: docs.yml  python-package.yml
bench/: ____run_benchmark.py  __cut_comparison.py  _backends.py  _circuits.py  _run_experiment.py  _util.py  bench.py  bench_cutqc.py  bench_generation.py  bench_main.py  bench_vqr.py  benchmarks.py  benchs.py  ckt.py  connectivity.py  csv_util.py  cut_and_reuse.py  cut_comparison.py  cut_vs_reuse.py  cutqc.py  cutqc_runtime.py  dep_minimizer.py  double_circuit.py  fidelity.py  guadalupe.py  knit_cost.py  knit_overhead.py  kolkata_scale.py  large_scale.py  n.py  noisy_scale.py  overhead.py  parallel.py  plot.py  plots.py  qaoa.py  qiskit2quimb.py  qr_gc.py  run.py  run_benchmark.py  (+10 more)
bench/bench_util/: _util.py  run.py
bench/circuits/: ae.py  circuits.py  dj.py  hamsim.py  qaoa.py  qft.py  two_local.py  utils.py  vqe.py
bench/cutqc/: wire_cutting_evaluation.py  wire_cutting_verification.py
bench/plot/: _plot_relative.py  _plot_util.py  abs_plot.py  bar_plot.py  data.py  get_average.py  plot.py  plot_copy.py  plot_cut_comparison.py  plot_noisy_scale.py  plot_runtime.py  plots.py  util.py
bench/results/: knit_hs1.csv  knit_hs2.csv  knit_mac.csv  large_scale.csv  large_scale_0.csv  large_scale_2.csv  large_scale_8.csv  overhead8.csv  parallelism_5 1.csv  parallelism_5 16.csv  parallelism_5 2.csv  parallelism_5 4.csv  parallelism_5 8.csv
bench/util/: _util.py  circuits.py  run.py
benchmark/: 01_cost_analysis.ipynb  01_plot.ipynb  01_qaoa.ipynb  02_tradeoff.ipynb  03_cluster_cutensor.py  03_runtime_simulation.ipynb  04_compiler.ipynb  05_fidelity.ipynb  05_qaoa.ipynb  06_plot.ipynb  06_plot_sim1.ipynb  06_run_cu.py  06_run_cu2.py  06_run_sim.py  06_run_sim2.py  06_runtime.ipynb  07_approx.py  07_approx2.ipynb  07_ckt.ipynb  07_plot.ipynb  10_end_to_end.py  10_plot.ipynb  11_end_to_end.py  12_2.py  12_fidelity.ipynb  13_sim.py  _plot_util.py  ansatz.py  bench.py  bench_fidelity_scale.py  bench_routing copy 2.ipynb  benchmark.py  benchmarks.py  benchstats.py  circuits.py  ckt.py  comparison.py  compiler.csv  compiler_tradeoff.ipynb  cost.csv  (+33 more)
benchmark/circuits/: __init__.py  circuits.py
benchmark/dj/: dj_100.qasm  dj_101.qasm  dj_102.qasm  dj_103.qasm  dj_104.qasm  dj_105.qasm  dj_106.qasm  dj_107.qasm  dj_108.qasm  dj_109.qasm  dj_11.qasm  dj_110.qasm  dj_111.qasm  dj_112.qasm  dj_113.qasm  dj_114.qasm  dj_115.qasm  dj_116.qasm  dj_117.qasm  dj_118.qasm  dj_119.qasm  dj_12.qasm  (+89 more)
docs/: 00_quickstart.py  01_basics.ipynb  02_optimization.ipynb  04_cutensornet.py  05_advanced.ipynb  circuit_cut_format.md  conf.py  cut_pass.md  devices.md  index.rst
evaluation/: analysis.py  benchmarks.py  plot.py  plot_all_new.py  run.py  run_all.py  utils.py
examples/: _example_circuit.py  _helper.py  backend.py  basics.py  batch_training.py  benchmark_heinsum_vs_naive.py  bisection.ipynb  bisection.py  circuit_cutting.py  classical_training.py  compiler.py  cut.ipynb  cut_example.py  cutting.py  error_mitigation.py  fid.py  gate_bisection.py  heinsum_advantage.py  heinsum_examples.py  htn_use_cases.py  hybrid_ml.py  hybrid_tensor_network.py  iris_comparison.py  map_fragments.py  mnist_quantum_network.py  optimal_cutting.ipynb  optimal_cutting.py  overview.ipynb  pareto_frontier.py  quantum_attention_mnist.py  sampling.py  simple.ipynb  simple.py  simple_wire_cut.py  stack.py  t.py  t2.py  torch_layer.py  train_quantum_nn.py  virt_swap.py  (+2 more)
experiments/: 05.12-entanglment-fidelity-correlation.ipynb
logs/: 01_scale_qac.jsonl  01_scale_qtpu.jsonl
qtpu/: __init__.py  circuit.py  circuit_tensor.py  contract.py  contract2.py  contraction.py  evaluate.py  helpers.py  instructions.py  ir.py  measure_tensor.py  qinterface.py  qpd_tensor.py  quasi_distr.py  tensor.py  visualization.py
qvm/: __init__.py  _cut_func.py  _quasi_distr.py  _qvm.py  circuit.py  circuit_graph.py  circuit_tensor.py  contraction.py  converters.py  dag.py  evaluator.py  frag_meta.py  graph.py  instructions.py  ir.py  main.py  qinterface.py  qpu_manager.py  quasi_distr.py  qvm.py  qvm_runner.py  result.py  run.py  runner.py  runtime.py  sampler.py  single_virtualizer.py  tensor.py  tn.py  types.py  util.py  virt_router.py  virtual_circuit.py  virtual_gates.py  virtualizer.py
results/: hamsim.csv  knit_cost.csv  qaoa.csv
scripts/: save_ibm_token.py  scale_sim_bench.py  store_token.py
test/: test_bisection.py  test_quasi_distr.py  test_virtual_circuit.py
tests/: test_quasi_distr.py  test_transforms.py
tutorial/: 0_virtual_gate.ipynb  1_cut.ipynb  1_distributed_circuit.ipynb  2_cut.ipynb  3_compiler.ipynb
vqc/: __init__.py  circuit.py  converters.py  device.py  fragment.py  prob_distr.py  types.py  util.py  virtual_circuit.py
(+1403 files in other folders)
