[project]
name = "qtpu"
version = "0.0.1"
description = "Quantum Tensor Processing Unit"
authors = [
    {name = "Nathaniel Tornow", email = "nathaniel.tornow@tum.de"},
]
dependencies = [
    "qiskit-aer>=0.15.1",
    "networkx>=3.0",
    "setuptools>=67.6.0",
    "numpy>=1.23.5",
    "qiskit>=1.1.0",
    "cotengra @ git+https://github.com/jcmgray/cotengra.git@main",
    "quimb>=1.8.1",
    "optuna>=3.6.1",
    "circuit-knitting-toolbox>=0.7.3",
    "kahypar>=1.3.5",
    "mqt.bench~=1.1.6",
    "clingo>=5.7.1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "pylatexenc>=2.10",
]
dev = [
    "mypy>=1.0.1",
    "black>=23.1.0",
    "pytest>=7.2.1",
    "isort>=5.12.0",
    "pip>=23.3.2",
]
bench = [
    "pandas>=2.0.1",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "pyarrow>=16.1.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
